src/App.css
#notification-form {
  border: 3px solid rgba(0, 0, 0, 0.05);
  border-radius:10px;
  width: 100%;
  margin-right: 10px;
  margin-left: 10px;
  flex: 1;
  height:50%;
  align-self: center;
  text-align: center;
  font-family: "Patrick Hand", cursive;
}

#notification-type {
  width: 50%;
  margin: 10px 0;
  border-radius: 5;
  text-align:center;
  font-family: "Patrick Hand", cursive;
}

#notification-message {
  height: 80px;
  width: 70%;
  border-radius:5px;
  padding:5px;
  font-family: "Patrick Hand", cursive;
}

#send-notification-btn {
  font-size: 16px;
  cursor: pointer;
  transition: background-color 0.3s;
  border: 3px solid rgba(0, 0, 0, 0.05);
  border-radius: 7.5px;
  width: 40%;
  margin-bottom: 5px;
  font-family: "Patrick Hand", cursive;
}

#notification-feed {
  overflow-y: auto;
  overflow-x: hidden;
  height:400px;
  border: 3px solid rgba(0, 0, 0, 0.05);
  width: 100%;
  margin-right: 10px;
  margin-left: 10px;
  border-radius:10px;
  font-family: "Patrick Hand", cursive;
}

.notification-card {
  background-color: #ffcccb;
  margin:10px;
  height: 70px;
  padding-left: 10px;
  border-radius:5px;
  font-family: "Patrick Hand", cursive;
}

.notification-message {
  font-family: "Patrick Hand", cursive;
}

.notification-timestamp {
  font-family: "Patrick Hand", cursive;
}

.container {
  display: flex;
  flex-direction: row;
}

@media (max-width: 768px) {
  .container {
    flex-direction: column;
  }
  #notification-form {
    margin-bottom: 10px;
    margin-top: 10px;
  }
}

